<resources>
    <string name="app_name">Siren Text</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to login -->
    <string name="not_connected_warning_title">Warning</string>
    <string name="not_connected_warning_message">This app requires internet connectivity to start. Please connect and try again.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="registration_help">How to Register</string>
    <string name="registration_help_hide">Hide Registration Steps</string>
    <string name="registration_help_message">To register, please contact administrator.\n+91 85930 52720</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_account_deactivated">This account is deactivated. \nPlease contact administrator.</string>
    <string name="error_not_connected_to_network">Device is not connected to internet. \nPlease connect and try again</string>
    <string name="error_missing_mandatory_field">Either Email or Password is empty</string>
    <string name="error_incorrect_credentials">Invalid Credentials. Please try again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_summary">SummaryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_customer">New Customer</string>
    <string name="title_activity_survey">New Customer</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="customer_group">Customer Group</string>
    <string name="email">Email ID</string>
    <string name="place">Place</string>
    <string name="comments">Comments</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_survey_details">Customer Details</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="sending">Notice</string>
    <string name="sending_wait_message">SMS Sending in progress. Please wait.</string>

    <!--SEND SMS-->
    <string name="send_sms">Send SMS</string>
    <string name="characters">Characters: </string>
    <string name="type_message">Type Message</string>
    <string name="clear_all">Clear All</string>
    <string name="predefined_message">Preset Msg</string>
    <string name="select_customer_group">Select Customer Group</string>
    <string name="mobile_numbers">Mobile Numbers</string>
    <string name="messages_left">Messages Left: </string>

    <string name="error_no_valid_numbers">There are no valid numbers</string>
    <string name="error_empty_message">The message should not be empty</string>

    <!--SEND SMS MENU-->
    <string name="clear_all_contacts">Delete All Contacts</string>
    <string name="customer_list">Customer List</string>
    <string name="logout">Logout</string>


    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="title_activity_send_sms">Send Message</string>
    <string name="title_activity_survey_list">Customer List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!--<string name="pref_title_sms_gateway">Enable social recommendations</string>-->
    <!--<string name="pref_description_sms_gateway">Recommendations for people to contact-->
    <!--based on your message history-->
    <!--</string>-->

    <string name="pref_title_shop_name">Shop name</string>
    <string name="pref_default_shop_name">Shop name</string>

    <!--Preference- SMS Gateway-->
    <string name="pref_title_sms_gateway">SMS Gateway</string>
    <string-array name="pref_sms_gateway_list">
        <item>Mobile Network</item>
        <item>Online SMS Aggregator</item>
    </string-array>
    <string-array name="pref_sms_gateway_list_values">
        <item>SIM</item>
        <item>ONLINE</item>
    </string-array>

    <string name="pref_send_welcome_sms">Send Welcome SMS</string>
    <string name="summary_send_welcome_sms">Send a welcome SMS when adding a new contact</string>

    <string name="pref_welcome_sms">Welcome SMS</string>
    <string name="pref_welcome_sms_text">Dear Customer,\nWelcome to SHOP. Thanks for registering to receive exclusive offers.</string>

    <string-array name="sort_options">
        <item>Purchase Date</item>
        <item>Name</item>
        <item>Contact Group</item>
        <item>Date of Birth</item>
        <item>Place</item>
    </string-array>

    <!--Preference- User groups (Hidden) -->
    <string name="pref_title_customer_group">Customer Group</string>
    <string name="pref_default_customer_group">Friends_Family_Colleagues</string>
    <string name="title_activity_predefined_messages">Predefined Messages</string>

    <string name="new_predefined_message">New Predefined Message</string>
    <string name="predefined_message_enter">Enter your Predefined Message \nhere</string>

    <string name="predefined_message_sample_1">Hi, Welcome to SHOP.\nThanks for your interest in participating our customer program.\n</string>
    <string name="predefined_message_sample_2">Dear Customer,\nSHOP wishes you a Merry Christmas and a Happy New Year.\n</string>
    <string name="predefined_message_sample_3">Dear Customer,\nCongratulations!\nWalk into SHOP within a week with this SMS and get exclusive 50% off.\n</string>

    <string name="customer_group_sample_1">Friends</string>
    <string name="customer_group_sample_2">Family</string>
    <string name="customer_group_sample_3">Colleagues</string>
    <string name="title_activity_customer_group_list_activiy">Customer Groups</string>

    <!--CUSTOMER LIST-->
    <string name="empty_customer_list_message">There are no customers added in this list</string>
</resources>
