<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="sms_gateway"-->
        <!--android:summary="@string/pref_description_sms_gateway"-->
        <!--android:title="@string/pref_title_sms_gateway" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_shop_name"
        android:inputType="textCapWords"
        android:key="shop_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_shop_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="SIM"
        android:entries="@array/pref_sms_gateway_list"
        android:entryValues="@array/pref_sms_gateway_list_values"
        android:key="sms_gateway"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sms_gateway" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_customer_group"
        android:inputType="textCapWords"
        android:key="customer_group"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_customer_group" />

</PreferenceScreen>
